# flask-poetry

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: pipeline.yaml
flask_poetry_api/: __init__.py
flask_poetry_api/entities/: user_entity.py
flask_poetry_api/interfaces/: course_interface.py  user_interface.py
flask_poetry_api/models/: course_model.py  user_model.py
flask_poetry_api/repositories/: course_repository.py  user_repository.py
flask_poetry_api/routes/: course_route.py  user_route.py
flask_poetry_api/routes/requests/: course_request.py  user_request.py
flask_poetry_api/routes/responses/: course_response.py  user_response.py
flask_poetry_api/schemas/: course_schema.py  user_schema.py
flask_poetry_api/services/: course_service.py  user_service.py
flask_poetry_api/tests/: test_app.py
